tests/ui/type/type-check/point-at-inference.stderr
error[E0308]: mismatched types
  --> $DIR/point-at-inference.rs:11:9
   |
LL |     bar(foo);
   |     --- ^^^ expected `i32`, found `&{integer}`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Vec<i32>`
              found struct `Vec<&{integer}>`
note: function defined here
  --> $DIR/point-at-inference.rs:1:4
   |
LL | fn bar(_: Vec<i32>) {}
   |    ^^^ -----------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
